--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -9,31 +9,31 @@
             </a>
             <a mat-list-item routerLink="/cliente">
                 <i class="material-icons">
-                    add_shopping_cart
-                </i>
+                    person
+                </i>    
                 Clientes
             </a>
             <a mat-list-item routerLink="/endereco">
                 <i class="material-icons">
-                    add_shopping_cart
+                    location_on
                 </i>
                 Endereços
             </a>
             <a mat-list-item routerLink="/maquina-lavar">
                 <i class="material-icons">
-                    add_shopping_cart
+                    local_laundry_service
                 </i>
                 Maquinas de Lavar
             </a>
             <a mat-list-item routerLink="/prancha-passar">
                 <i class="material-icons">
-                    add_shopping_cart
+                 local_laundry_service
                 </i>
                 Pranchas de Passar
             </a>
             <a mat-list-item routerLink="/secadora">
                 <i class="material-icons">
-                    add_shopping_cart
+                local_laundry_service  
                 </i>
                 Secadoras
             </a>
