--- a/frontend/src/app/views/cliente/cliente-list/cliente-list.component.html
+++ b/frontend/src/app/views/cliente/cliente-list/cliente-list.component.html
@@ -1,4 +1,4 @@
-<h1>Dados do cliente</h1>
+<h1>Dados do Cliente</h1>
 
 <mat-toolbar class="new-item">
     <a mat-raised-button [routerLink]="['/cliente/novo']">
