--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header mat-elevation-z4">
+<mat-toolbar class="header mat-elevation-z4" id="wave">
     <span>
         <a>
             <img class="logo" src="" alt="logo">
@@ -7,4 +7,3 @@
     </span>
 
 </mat-toolbar>
-<mat-toolbar>
