--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar>
-    <span>
+<mat-toolbar id="cor-gradiente">
+    <span id="cor-footer">
         Desenvolvido por
-        <a href="mailto:viniciofs@hotmail.com">Vinício Flávio da Silva</a>
+        <a href="mailto:viniciofs@hotmail.com" id="cor-footer2">Vinício Flávio da Silva</a>
     </span>
 </mat-toolbar>
