--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header mat-elevation-z4" id="wave">
     <span>
         <a>
-            <img class="logo" src="/lavanderiatg/frontend/src/assets/logo.png" alt="logo">
+            <img class="logo" src="/assets/logo.png" alt="logo">
 
         </a>
     </span>
